add: controller, routes, models and docs
