# src/models/Loan.js
@@ -7,23 +7,16 @@ module.exports = (sequelize, DataTypes) => {
      * This method is not a part of Sequelize lifecycle.
      * The `models/index` file will call this method automatically.
      */
-    static associate(models) {
-      Loan.hasOne(models.Member, {
-        foreignKey: "id_member",
-      });
-
-      Loan.hasMany(models.Book, {
-        foreignKey: "id_book",
-      });
-    }
+    static associate(models) {}
   }
   Loan.init(
     {
       id_member: DataTypes.INTEGER,
       id_book: DataTypes.INTEGER,
       loan_date: DataTypes.DATE,
+      deadline: DataTypes.DATE,
       return_date: DataTypes.DATE,
-      penalty: DataTypes.BOOLEAN,
+      status: DataTypes.STRING,
     },
     {
       sequelize,
